# docquery-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  implementation_plan.md  main.py  pyproject.toml
app/api/: auth.py  dependencies.py  middleware.py  schemas.py
app/api/routes/: __init__.py  documents.py  health.py  query.py
app/config/: __init__.py  logging_config.py  settings.py
app/core/: __init__.py  chunker.py  embedder.py  generator.py  parser.py  retriever.py
app/db/: __init__.py  database.py  vector_store.py
app/exceptions/: __init__.py  auth.py  document.py
app/models/: __init__.py  document.py  query_log.py
app/services/: __init__.py  document_service.py  ingestion_service.py  query_service.py
frontend/: app.py
frontend/components/: chat_message.py  sidebar.py
frontend/pages/: 1_📄_Upload.py  2_💬_Chat.py  3_📊_Dashboard.py
tests/e2e/: test_api.py
tests/integration/: test_ingestion.py  test_query.py
tests/unit/: test_chunker.py  test_embedder.py  test_parser.py
