[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "docquery-ai"
version = "0.1.0"
description = "Production-ready RAG application for document Q&A"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Malli"},
]

dependencies = [
    # --- API Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # --- LLM & Embeddings ---
    "ollama>=0.4.0",
    "sentence-transformers>=3.0.0",

    # --- Vector Store ---
    "chromadb>=0.5.0",

    # --- Document Parsing ---
    "PyMuPDF>=1.24.0",         # PDF parsing
    "python-docx>=1.1.0",      # DOCX parsing
    "pandas>=2.2.0",           # CSV + Excel parsing
    "openpyxl>=3.1.0",         # Excel .xlsx support for pandas
    "beautifulsoup4>=4.12.0",  # HTML parsing
    "lxml>=5.0.0",             # Fast HTML/XML parser backend

    # --- Database ---
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",       # Async SQLite support

    # --- Configuration ---
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",

    # --- Logging ---
    "structlog>=24.0.0",

    # --- Utilities ---
    "python-multipart>=0.0.9", # File upload support for FastAPI
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",           # Async test client for FastAPI
    "ruff>=0.6.0",             # Linting + formatting
    "mypy>=1.11.0",            # Type checking
    "pre-commit>=3.8.0",
]

frontend = [
    "streamlit>=1.38.0",
    "plotly>=5.24.0",          # Dashboard charts
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
